Fix chevron/text overlap

--- a/solution/ui/src/components/molecules/accordion/accordion.less
+++ b/solution/ui/src/components/molecules/accordion/accordion.less
@@ -12,10 +12,6 @@
     }
   
     .accordionContent {
-
-      i.chevron.icon {
-        float: right;
-      }
   
       .accordion.active {
         border-bottom: 1px solid @sba-gray-light;
@@ -27,6 +23,16 @@
         width: 100%;
         padding: 20px 10px;
         margin-bottom: 1rem;
+
+        h3 {
+          width: 85%;
+          display: inline-block;
+        }
+
+        i.chevron.icon {
+          float: right;
+          width: 10%;
+        }
       }
   
       .accordionContent {
